# neat-cpp

./: .gitignore  CMakeLists.txt  README.md  com.acrilique.neat.yml
include/: custom_graphics_view.h  image_presenter.h  input_device_detector.h  utils.h
resources/: com.acrilique.neat.desktop
src/: custom_graphics_view.cpp  image_presenter.cpp  input_device_detector.cpp  main.cpp  utils.cpp
